sage server: fix parsing of blocks to not string whitespace, since that tricks certain % modes (surprisingly easy this time :-)

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -187,7 +187,7 @@ Editor for files in a project
 
 .sagews-input-hr {
     border-top: 0px;
-    border-bottom: 2px solid #999;
+    border-bottom: 1px solid #999;
     margin: 0px;
     padding-top: .5em;
 }
